frontend/src/app/components/partials/navigation/navigation.component.css
nav {
    height: 100%;
    width: 250px;
    position: fixed;
    top: 0;
    left: 0; 
    background-color: var(--background-color);
    box-shadow: 0 0 8px var(--shadow-color);
    z-index: 10;
    transition:  0.5s ease;
}


nav.close .link-name {
    transition: opacity 0.5s ease-in-out;
}

nav.close {
    width: 73px;
}

nav.close li a .link-name{
    opacity: 0;
    pointer-events: none;
}



ul {
    padding: 0rem;
    width: 100%;
}

li {
    width: 100%;
    color:var(--primary-color);
    list-style: none;
}

li:hover {
    background:var(--primary-color);
    color: var(--toggle-color);
    cursor: pointer;
}

a {
    width: 100%;
    padding: 1rem 1.5rem;
    display: flex;
    align-items: center; 
    gap: 1rem;
    font-size: 1.2rem;  
    color: var(--primary-color);
}

a:hover {
    background:var(--primary-color);
    color: var(--toggle-color);
    cursor: pointer;
}

li a > span {
    display: flex;
    justify-content: center;
    align-items: center;
}

.icon {
    font-size: 1.5rem;  
    display: flex;
    align-items: center;
}

.custom-icon {
    padding: 0;
    
}

.cart-btn {
    border: none;
    outline: none;
    background-color: transparent;
    color: var(--primary-color);
    position: relative; 
  
}

.counter {
    height: 20px;
    width: 20px;
    background: var(--accent-color);
    color: var(--toggle-color);
    border-radius: 100rem;
    font-size: 0.7rem;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    line-height: 11px;
    position: absolute;
    top: 5px;
    left: 35px;
}


mat-icon {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 24px;
}

.menu-items  {
    margin-top: 40px;
    height: calc(100% - 90px);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.logout-mode {
    width: 100%;
    padding-top: 10px;
    border-top: 1px solid var(--light-color);
}

.login-link {
    width: 100%;
}
 
.mode {
    position: relative;
    margin-bottom: 40px;
    display: flex;
    align-items: center;
    white-space: nowrap;
}


@media screen and (max-width: 700px) {
    nav {
        width: 73px;
    }

    nav.close {
        width: 250px;
    }

    nav li a .link-name{
        opacity: 0;
        pointer-events: none;
    }

    nav.close li a .link-name{
        opacity: 1;
        pointer-events: auto;
    }
    
}


@media screen and (max-width: 400px) {
    nav {
        width: 0px;
    }

    nav.close {
        width: 250px;
    }

    nav li a .icon {
        opacity: 0;
        pointer-events: none;
    }

    nav.close li a .icon {
        opacity: 1;
        pointer-events: auto;
    }

}

